--- a/Movie Search/Base.lproj/Main.storyboard
+++ b/Movie Search/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bq7-7z-4yZ">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -47,6 +47,139 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="114.50892857142857"/>
         </scene>
+        <!--Movie Details View Controller-->
+        <scene sceneID="gej-Tg-3eu">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailsViewController" id="94D-Us-MxN" customClass="MovieDetailsViewController" customModule="Movie_Search" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RV3-te-QWm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vVe-0G-Ahz">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="exr-Ad-ejN">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qNN-L4-tCG" customClass="AsyncImageView" customModule="Movie_Search" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="350" id="Oa8-sF-I5r"/>
+                                                </constraints>
+                                            </imageView>
+                                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2xE-Fy-EUN">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gmj-ri-pLa">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="350"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </view>
+                                                <blurEffect style="regular"/>
+                                            </visualEffectView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Loz-Em-dGG">
+                                                <rect key="frame" x="20" y="160" width="46.5" height="30"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                <color key="textColor" systemColor="systemIndigoColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Info" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHH-WZ-ZTk">
+                                                <rect key="frame" x="20" y="198" width="21.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zR5-ER-uSK">
+                                                <rect key="frame" x="20" y="358" width="90" height="30"/>
+                                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="fP6-a4-8sh"/>
+                                                </constraints>
+                                                <state key="normal" title="Not Watched">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="15"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEo-u1-8H3">
+                                                <rect key="frame" x="20" y="398" width="76" height="20.5"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xF-R6-EUg">
+                                                <rect key="frame" x="20" y="426.5" width="96.5" height="17"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Loz-Em-dGG" secondAttribute="trailing" constant="8" id="2DI-cv-xfZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="qNN-L4-tCG" secondAttribute="trailing" id="2rj-Ht-yG9"/>
+                                            <constraint firstItem="Loz-Em-dGG" firstAttribute="centerY" secondItem="qNN-L4-tCG" secondAttribute="centerY" id="56X-17-dKr"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XHH-WZ-ZTk" secondAttribute="trailing" constant="8" id="5BJ-ZY-f51"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="uEo-u1-8H3" secondAttribute="trailing" constant="8" id="DXf-Aa-Uk8"/>
+                                            <constraint firstItem="zR5-ER-uSK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="XHH-WZ-ZTk" secondAttribute="bottom" constant="8" id="F7H-ej-ArN"/>
+                                            <constraint firstItem="zR5-ER-uSK" firstAttribute="top" secondItem="qNN-L4-tCG" secondAttribute="bottom" constant="8" id="FnK-OU-dcJ"/>
+                                            <constraint firstAttribute="height" constant="1000" id="Jiq-aP-yIY"/>
+                                            <constraint firstItem="zR5-ER-uSK" firstAttribute="leading" secondItem="exr-Ad-ejN" secondAttribute="leading" constant="20" id="LDu-b7-s8n"/>
+                                            <constraint firstItem="qNN-L4-tCG" firstAttribute="top" secondItem="exr-Ad-ejN" secondAttribute="top" id="MjC-4F-9Bk"/>
+                                            <constraint firstItem="2xE-Fy-EUN" firstAttribute="top" secondItem="qNN-L4-tCG" secondAttribute="top" id="MnI-18-9XX"/>
+                                            <constraint firstItem="2xE-Fy-EUN" firstAttribute="trailing" secondItem="qNN-L4-tCG" secondAttribute="trailing" id="N2t-VK-pzX"/>
+                                            <constraint firstItem="XHH-WZ-ZTk" firstAttribute="top" secondItem="Loz-Em-dGG" secondAttribute="bottom" constant="8" id="OuC-g4-Pce"/>
+                                            <constraint firstItem="uEo-u1-8H3" firstAttribute="top" secondItem="zR5-ER-uSK" secondAttribute="bottom" constant="10" id="UWY-ve-vjT"/>
+                                            <constraint firstItem="XHH-WZ-ZTk" firstAttribute="leading" secondItem="Loz-Em-dGG" secondAttribute="leading" id="Uk5-Gz-s1h"/>
+                                            <constraint firstItem="Loz-Em-dGG" firstAttribute="leading" secondItem="exr-Ad-ejN" secondAttribute="leading" constant="20" id="ZLc-r0-66b"/>
+                                            <constraint firstItem="2xE-Fy-EUN" firstAttribute="leading" secondItem="qNN-L4-tCG" secondAttribute="leading" id="ala-F1-XnU"/>
+                                            <constraint firstItem="5xF-R6-EUg" firstAttribute="leading" secondItem="uEo-u1-8H3" secondAttribute="leading" id="hxW-1H-NhN"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5xF-R6-EUg" secondAttribute="trailing" constant="8" id="jaE-UA-pdf"/>
+                                            <constraint firstItem="2xE-Fy-EUN" firstAttribute="bottom" secondItem="qNN-L4-tCG" secondAttribute="bottom" id="jjA-Sc-EUL"/>
+                                            <constraint firstItem="qNN-L4-tCG" firstAttribute="height" secondItem="exr-Ad-ejN" secondAttribute="height" multiplier="0.35" id="jzG-qS-zxi"/>
+                                            <constraint firstItem="uEo-u1-8H3" firstAttribute="leading" secondItem="zR5-ER-uSK" secondAttribute="leading" id="pB5-Iq-kOi"/>
+                                            <constraint firstItem="5xF-R6-EUg" firstAttribute="top" secondItem="uEo-u1-8H3" secondAttribute="bottom" constant="8" id="t95-7z-Oc1"/>
+                                            <constraint firstItem="qNN-L4-tCG" firstAttribute="leading" secondItem="exr-Ad-ejN" secondAttribute="leading" id="x9z-kK-gfl"/>
+                                            <constraint firstItem="2xE-Fy-EUN" firstAttribute="centerY" secondItem="qNN-L4-tCG" secondAttribute="centerY" id="za6-X8-2dO"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="exr-Ad-ejN" firstAttribute="bottom" secondItem="SSi-gv-HOx" secondAttribute="bottom" id="9Jg-9v-zDj"/>
+                                    <constraint firstItem="exr-Ad-ejN" firstAttribute="leading" secondItem="SSi-gv-HOx" secondAttribute="leading" id="UPv-Kh-td8"/>
+                                    <constraint firstItem="exr-Ad-ejN" firstAttribute="width" secondItem="ABu-Pb-qdH" secondAttribute="width" id="bQb-pd-Dto"/>
+                                    <constraint firstItem="exr-Ad-ejN" firstAttribute="top" secondItem="SSi-gv-HOx" secondAttribute="top" id="wkl-n0-rGZ"/>
+                                    <constraint firstItem="exr-Ad-ejN" firstAttribute="trailing" secondItem="SSi-gv-HOx" secondAttribute="trailing" id="zGp-Fr-q5N"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="SSi-gv-HOx"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="ABu-Pb-qdH"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Py4-n0-Xvi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vVe-0G-Ahz" firstAttribute="top" secondItem="RV3-te-QWm" secondAttribute="top" id="40S-Yc-vPH"/>
+                            <constraint firstItem="Py4-n0-Xvi" firstAttribute="bottom" secondItem="vVe-0G-Ahz" secondAttribute="bottom" id="6S6-jg-gWI"/>
+                            <constraint firstAttribute="trailing" secondItem="vVe-0G-Ahz" secondAttribute="trailing" id="Aql-Su-RWg"/>
+                            <constraint firstItem="vVe-0G-Ahz" firstAttribute="leading" secondItem="RV3-te-QWm" secondAttribute="leading" id="z0L-Z1-x1U"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="exr-Ad-ejN" id="rLC-ef-yMb"/>
+                        <outlet property="imageViewHeightConstraint" destination="Oa8-sF-I5r" id="W9h-Mi-9Bz"/>
+                        <outlet property="infoLabel" destination="XHH-WZ-ZTk" id="FJY-Cf-YYk"/>
+                        <outlet property="overviewBodyLabel" destination="5xF-R6-EUg" id="NPN-ZJ-wE1"/>
+                        <outlet property="posterImageView" destination="qNN-L4-tCG" id="JLJ-d6-knV"/>
+                        <outlet property="scrollView" destination="vVe-0G-Ahz" id="4bf-Va-zjH"/>
+                        <outlet property="titleLabel" destination="Loz-Em-dGG" id="Xee-HX-LiZ"/>
+                        <outlet property="watchStatusButton" destination="zR5-ER-uSK" id="gLT-sx-RS9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cYF-LF-G7P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1974" y="115"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="SYp-GL-2Cd">
             <objects>
@@ -67,8 +200,14 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
